--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@pinia/nuxt": "^0.4.11",
+    "@vueuse/core": "^10.4.1",
     "core-js": "^3.25.3",
     "nuxt": "^2.17.0",
     "pinia": "^2.1.6",
